# websearch_agent

./: .env.example  .env.template  .gitignore  Agent.md  MODULE_IMPORT_TEST_RESULTS.md  README.md  answer_generation_result.json  cli_test_output.txt  example_usage.py  pyproject.toml  test_answer_generation.py  test_config_compatibility.py  test_module_import.py  websearch-agent.bat  websearch-agent.sh  websearch_agent.py  websearch_agent_arguments_progress.md
.zencoder/docs/: repo.md
config/: default_config.yaml
docs/: API_REFERENCE.md  MODULE_USAGE_GUIDE.md  SCRIPTS_DOCUMENTATION.md  checklist.md  debugging_typer_cli.md  generating_answers_from_search_results.md  generating_answers_from_search_results_checklist.md  generating_answers_from_search_results_tickets.md  implementation_checklist.md  implementation_tickets.md  input_arguments_plan.md  main_checklist.md  main_plan.md  main_tickets.md  plan.md  tickets.md  websearch_agent_documentation.md
docs_old/: checklist.md  tickets.md
logs/: .e1b51b06e136607f136442559599421ee3fae2ae-audit.json
my_output/myproject/: myfile_20250707_020252.json  myfile_20250707_020518.json  myfile_20250707_020554.json  myfile_20250707_020731.json
my_output/valid_project/: valid_file_20250707_020519.json  valid_file_20250707_020554.json  valid_file_20250707_020731.json
output/default_project/: answer_result_20250707_020715.json  answer_result_20250707_020721.json  answer_result_20250707_021951.json  answer_result_20250707_021952.json  answer_result_20250707_022123.json  answer_result_20250707_022238.json  answer_result_20250707_022346.json  answer_result_20250707_022347.json  answer_result_20250707_025259.json  answer_result_20250707_025352.json  (+11 more)
search_agent/: __init__.py  answer_evaluator.py  answer_orchestrator.py  answer_synthesizer.py  cli.py  config.py  evaluator.py  orchestrator.py  output_manager.py
tests/: __init__.py  test_cli_argument_parsing.py  test_config_file_loading.py  test_config_merging.py  test_output_manager.py  test_playwright_search.py  test_selenium_search.py  test_web_content_extractor.py
(+13 files in other folders)
