[project]
name = "websearch-agent"
version = "0.1.0"
description = "A modular, extensible web search agent system"
authors = [
    {name = "Mark Berjanskii",email = "mb1@ualberta.ca"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
