[project]
name = "websearch-agent"
version = "0.1.0"
description = "A modular, extensible web search agent system"
authors = [
    {name = "Mark Berjanskii",email = "mb1@ualberta.ca"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "selenium (>=4.34.0,<5.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "playwright (>=1.53.0,<2.0.0)",
    "openai (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.0.0"

